--- a/css/dashboard-main/logon.css
+++ b/css/dashboard-main/logon.css
@@ -155,7 +155,7 @@ input#password::-webkit-input-placeholder::before {
 .logon-logon #content {
     float: none !important;
     border: none !important;
-    width: 100%;
+    width: 100% !important;
     padding: 0 !important;
     display: flex;
     text-align: center;
