--- a/css/dashboard-main/mobile.css
+++ b/css/dashboard-main/mobile.css
@@ -118,9 +118,9 @@
     background-repeat: no-repeat !important;
 	}
 	
-	#header {
+	header {
     height: 4rem;
-    padding: 0;
+    padding: 0 0 0 0.25rem;
     position: absolute !important;
     display: flex;
     background: white !important;
@@ -187,7 +187,10 @@
 	}
 	
 	.data-block.data-system-up-time {
-    margin: 0 !important;
+    margin: 0.25rem 0 !important;
+	}
+	 .data-system-up-time::before {
+    display: none !important;
 	}
 	
 	#footer {
