Dashboard App for ACF

--- a/css/dashboard-main/mobile.css
+++ b/css/dashboard-main/mobile.css
@@ -112,7 +112,7 @@
     padding: 0.15rem 0rem;
     background-size: 6rem !important;
     justify-content: flex-end !important;
-    background-color: #16597a !important;
+    background-color: #006787 !important;
     width: 90vw;
     height: 3.5rem !important;
     background-repeat: no-repeat !important;
