--- a/css/dashboard-main/logon.css
+++ b/css/dashboard-main/logon.css
@@ -27,7 +27,7 @@
     background-position: 3.5rem center !important;
     padding: 1rem 2.5rem;
     justify-content: flex-end !important;
-    background-color: #16597a !important;
+    background-color: #006787 !important;
     width: 400px;
     height: 3.5rem !important;
     box-shadow: 2px 2px 30px #000000ab;
@@ -104,7 +104,7 @@ input#password::-webkit-input-placeholder::before {
     color: #FFF;
     font-weight: 900;
     border-radius: 4px;
-    background-color: #16597a;
+    background-color: #006787;
     width: 100%;
     height: 2.5rem !important;
     margin-top: 0 !important;
