--- a/css/dashboard-main/mobile.css
+++ b/css/dashboard-main/mobile.css
@@ -136,7 +136,7 @@
     display: block !important;
 	}
 	
-	header #toogle i.fa-solid.fa-bars {
+	header #toogle-link {
     color: #d9d9d9;
     float: left;
     margin: 0 1.5rem 0 0.5rem;
@@ -201,6 +201,10 @@
     padding: 0.33rem 0.5rem !important;
     font-size: 0.5rem;
 	margin: 0 1.5rem 0 0 !important;
+	}
+	
+	#user-logon {
+    margin: 0 0.75rem 0 0;
 	}
 	
 	#footer {
