Dashboard App for ACF

--- a/css/dashboard-main/logon.css
+++ b/css/dashboard-main/logon.css
@@ -75,7 +75,7 @@
     margin-top: 1rem !important;
 }
 
-#logon .left {
+#login .left {
     display: none !important;
 } /*REMOVE ME ! ------------------- REMOVE LEFT CONTENT FOR PLACEHOLDER - GO TO readme.md for activate it in /usr/share/lua/5.4/html - Depend of your lua version acf install 20230407*/
 
