--- a/css/dashboard-main/mobile.css
+++ b/css/dashboard-main/mobile.css
@@ -143,6 +143,10 @@
 	padding: 1.25rem 1.5rem 1.25rem 0.5rem !important;
 	}
 	
+	.logon button#showPass {
+    right: -0.8rem !important;
+	}
+	
 	.icon-header {
     margin: 0 1.5rem 0 0;
 	}
