Dashboard App for ACF

--- a/css/dashboard-main/mobile.css
+++ b/css/dashboard-main/mobile.css
@@ -148,9 +148,10 @@
 	}
 	
 	.icon-header {
-    margin: 0 1.5rem 0 0;
+    padding: 1.25rem 1rem;
+    margin: 0 0.5rem 0 0;
 	}
-	
+
 	.chart-legend {
     flex-wrap: wrap !important;
     justify-content: space-evenly;
