--- a/dashboard.css
+++ b/dashboard.css
@@ -47,4 +47,7 @@
 @import "css/dashboard-pages/openssl.css";
 @import "css/dashboard-pages/welcome.css";
 
-/*--------------------------------------------------------------------------------*/
+/*----------------------------------------------------------------------------------
+ * DASHBOARD USERS DESIGN
+ *--------------------------------------------------------------------------------*/
+@import "css/dashboard-users/users.css";
