--- a/css/dashboard-main/header.css
+++ b/css/dashboard-main/header.css
@@ -64,20 +64,21 @@ header {
     align-items: center;
 }
 
-#toogle-link {
+#toggle-link {
     padding: 1.25rem 2rem 1.25rem 1rem;
 }
 
-#toogle, #toogle.active i.fa-solid.fa-bars {
+#toggle, #toggle.active i.fa-solid.fa-bars {
     color: #d9d9d9;
 }
 
-#toogle.not_active i.fa-solid.fa-bars {
+#toggle.not_active i.fa-solid.fa-bars {
     color: #006787;
 }
 
 .icon-header {
-    margin: 0 3rem 0 0;
+    padding: 1.25rem 1.5rem;
+    margin: 0 1.5rem 0 0;
 }
 
 .header-links {
@@ -93,42 +94,23 @@ header {
 }
 
 #user-logon {
+	cursor: pointer;
     display: inline-block;
     border-radius: 50em;
-    width: 2.25rem;
-    height: 2.25rem;
-    padding: 0;
-    background: linear-gradient(140deg, rgb(0 43 255) 0%, rgb(0 137 255) 100%);
-    border: 2px solid #3c3c3c;
-	background-image: url(../../img/users/doe/icon/john-doe.png);
-    color: transparent;
-    border-radius: 50em;
-    background-size: cover;
-	background-repeat: no-repeat;
-	background-position: center;
-}
-
-
-/* ADD USER ICON WITH BUILT-IN PERSONAL USER CLASS*/
-.user-root {
-    /* background: linear-gradient(140deg, rgb(255 129 0) 0%, rgb(255 0 0) 100%); */
-    background-image: url(../../img/users/root/icon/alpine-guard-dog.png) !important;
-    color: transparent !important;
-    border-radius: 50em !important;
-    background-size: contain !important;
-    border: none !important;
-	background-repeat: no-repeat !important;
+    padding: 1.25rem;
 }
 
 #text-user-logon {
     color: white;
     font-size: 0.55rem;
     font-weight: 900;
+    cursor: pointer;
     margin: 0 3rem 0 0;
     padding: 0.33rem 1.5rem;
     vertical-align: middle;
     background: #a9a9a9;
     border-radius: 2.5px;
+    top: 0.1rem;
     position: relative;
 }
 
