--- a/www/skins/dashboard/css/dashboard-main/nav.css
+++ b/www/skins/dashboard/css/dashboard-main/nav.css
@@ -38,7 +38,7 @@
 #nav ul li ul {
     list-style-type: none;
     margin-top: 0.5rem;
-    padding: 0 0.25rem 0.5rem;
+    padding: 0 0 0.5rem;
 }
 
 #nav ul li ul li a {
@@ -60,11 +60,12 @@
 
 li.selected.item-field {
     background: #3e3e3e !important;
+	border-radius: 2px;
 }
 
 #nav ul li ul li.selected a {
     font-weight: bold;
-    border-radius: 2px;
+    padding: 0.5rem 00 0.5rem 1.25rem !important;
 }
 
 #nav .category-title {
