Change 'Version OK' color

--- a/www/skins/dashboard/css/dashboard-main/icons.css
+++ b/www/skins/dashboard/css/dashboard-main/icons.css
@@ -264,7 +264,7 @@
     color: inherit;
     font-size: 1rem;
     top: 0.1rem;
-    color: #7beb00;
+    color: #68c700;
 }
 
 .welcome .system-update .dashboard-title-system::before {
