--- a/www/skins/dashboard/css/dashboard-main/tags.css
+++ b/www/skins/dashboard/css/dashboard-main/tags.css
@@ -232,7 +232,7 @@ input.submit:hover {
 
 .version-number-uptodate {
     font-size: 1rem;
-    color: #7beb00 !important;
+    color: #68c700 !important;
 	font-family: sans-serif;
 }
 
