Upgrade to TRINITY ACF v1.0.1 - Official SVN number

--- a/www/skins/dashboard/css/dashboard-main/dark.css
+++ b/www/skins/dashboard/css/dashboard-main/dark.css
@@ -111,3 +111,7 @@
 .dark-theme #theme-conv {
     color: white !important;
 }
+
+.dark-theme .fa-solid.fa-circle-half-stroke {
+    color: rgb(99 0 210) !important;
+}
