Add User Roles CSS

--- a/www/skins/dashboard/dashboard.css
+++ b/www/skins/dashboard/dashboard.css
@@ -46,6 +46,7 @@
 @import "css/dashboard-pages/health.css";
 @import "css/dashboard-pages/interfaces.css";
 @import "css/dashboard-pages/openssl.css";
+@import "css/dashboard-pages/roles.css";
 @import "css/dashboard-pages/welcome.css";
 
 /*----------------------------------------------------------------------------------
