--- a/www/skins/dashboard/css/dashboard-main/content.css
+++ b/www/skins/dashboard/css/dashboard-main/content.css
@@ -24,15 +24,29 @@
 
 #content h1 {
     font-weight: bold;
+    background: #f3f3f3;
+    color: grey;
     margin: 0.8em 0 1em 0;
-    padding: 1rem 0;
+    padding: 1rem;
     text-transform: capitalize;
     border-radius: 4px;
     display: flex;
+    font-size: 1rem;
     flex-direction: row;
     align-items: center;
     flex-wrap: nowrap;
     justify-content: flex-start;
+}
+
+#content h1::before {
+    font-family: "Font Awesome 6 Free";
+    font-weight: bold;
+    content: '\F0C8';
+    margin: 0 0.5rem 0 0;
+    color: rgb(0 0 0 / 8%);
+    position: relative;
+    font-size: 1rem;
+    top: -0.1rem;
 }
 
 #content h1:first-child {
@@ -41,10 +55,10 @@
 
 #content h2 {
     color: #585858;
-    font-size: 16px;
-    font-weight: 500;
+    font-size: 0.75rem;
+    font-weight: 600;
     letter-spacing: 0.1em;
-    margin-top: 1.2em;
+    margin-top: 1.2rem;
 }
 
 #content h3 { 
